# Unity-IKFK-Plugin

./: CMakeLists.txt  README.md
RelWithDebInfo/: CurvePlugin.exp  FKIK.lib  OpenFBX.lib  behavior.lib  curve.lib  glad.lib  glfw3.lib  glfw3dll.exp  imgui.ini  imgui.lib  tinyobj.lib
UnityPlugin/Assets/Plugins/: BehaviorPlugin.exp  BehaviorPlugin.lib  CurvePlugin.exp  CurvePlugin.lib  FKIKPlugin.exp  FKIKPlugin.lib  ParticlePlugin.exp  ParticlePlugin.lib  __FKIKPlugin.soln
UnityPlugin/UserSettings/: EditorUserSettings.asset
UnityPlugin/UserSettings/Layouts/: default-2021.dwlt
src/animation/: aActor.cpp  aBVHController.cpp  aIKController.cpp  aJoint.cpp  aRotation.cpp  aSkeleton.cpp  aSplineQuat.cpp  aSplineVec3.cpp  aTransform.cpp
src/viewer/: FKViewer.cpp
